Updates to styling and structure

--- a/about.html
+++ b/about.html
@@ -4,15 +4,18 @@ title: About
 permalink: /about/
 ---
 
-This is the base Jekyll theme. You can find out more info about customizing your Jekyll theme, as well as basic Jekyll usage documentation at [jekyllrb.com](https://jekyllrb.com/)
+<section>
 
-You can find the source code for Minima at GitHub:
-[jekyll][jekyll-organization] /
-[minima](https://github.com/jekyll/minima)
+    <header>
+        <h2>Even more about the project</h2>
+    </header>
 
-You can find the source code for Jekyll at GitHub:
-[jekyll][jekyll-organization] /
-[jekyll](https://github.com/jekyll/jekyll)
-
-
-[jekyll-organization]: https://github.com/jekyll
+    <div class="content">
+        
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Partim cursu et peragratione laetantur, congregatione aliae coetum quodam modo civitatis imitantur; Mihi quidem Antiochum, quem audis, satis belle videris attendere. Et quidem, inquit, vehementer errat; Quia dolori non voluptas contraria est, sed doloris privatio. Duo Reges: constructio interrete. Immo alio genere; Animi enim quoque dolores percipiet omnibus partibus maiores quam corporis. An nisi populari fama?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Partim cursu et peragratione laetantur, congregatione aliae coetum quodam modo civitatis imitantur; Mihi quidem Antiochum, quem audis, satis belle videris attendere. Et quidem, inquit, vehementer errat; Quia dolori non voluptas contraria est, sed doloris privatio. Duo Reges: constructio interrete. Immo alio genere; Animi enim quoque dolores percipiet omnibus partibus maiores quam corporis. An nisi populari fama?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Partim cursu et peragratione laetantur, congregatione aliae coetum quodam modo civitatis imitantur; Mihi quidem Antiochum, quem audis, satis belle videris attendere. Et quidem, inquit, vehementer errat; Quia dolori non voluptas contraria est, sed doloris privatio. Duo Reges: constructio interrete. Immo alio genere; Animi enim quoque dolores percipiet omnibus partibus maiores quam corporis. An nisi populari fama?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Partim cursu et peragratione laetantur, congregatione aliae coetum quodam modo civitatis imitantur; Mihi quidem Antiochum, quem audis, satis belle videris attendere. Et quidem, inquit, vehementer errat; Quia dolori non voluptas contraria est, sed doloris privatio. Duo Reges: constructio interrete. Immo alio genere; Animi enim quoque dolores percipiet omnibus partibus maiores quam corporis. An nisi populari fama?</p>
+            
+    </div>
+</section>
