--- a/index.html
+++ b/index.html
@@ -3,23 +3,21 @@
 # To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 
 layout: main
+home: true
 ---
 
 <section>
 
     <header>
-        <h2>Posts</h2>
+        <h2>About the project</h2>
     </header>
 
     <div class="content">
-
-        <ul>
-            {% for post in site.posts %}
-                <li>
-                    <a href="{{ post.url }}">{{ post.title }}</a>
-                </li>
-            {% endfor %}
-        </ul>
+        
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Partim cursu et peragratione laetantur, congregatione aliae coetum quodam modo civitatis imitantur; Mihi quidem Antiochum, quem audis, satis belle videris attendere. Et quidem, inquit, vehementer errat; Quia dolori non voluptas contraria est, sed doloris privatio. Duo Reges: constructio interrete. Immo alio genere; Animi enim quoque dolores percipiet omnibus partibus maiores quam corporis. An nisi populari fama?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Partim cursu et peragratione laetantur, congregatione aliae coetum quodam modo civitatis imitantur; Mihi quidem Antiochum, quem audis, satis belle videris attendere. Et quidem, inquit, vehementer errat; Quia dolori non voluptas contraria est, sed doloris privatio. Duo Reges: constructio interrete. Immo alio genere; Animi enim quoque dolores percipiet omnibus partibus maiores quam corporis. An nisi populari fama?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Partim cursu et peragratione laetantur, congregatione aliae coetum quodam modo civitatis imitantur; Mihi quidem Antiochum, quem audis, satis belle videris attendere. Et quidem, inquit, vehementer errat; Quia dolori non voluptas contraria est, sed doloris privatio. Duo Reges: constructio interrete. Immo alio genere; Animi enim quoque dolores percipiet omnibus partibus maiores quam corporis. An nisi populari fama?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Partim cursu et peragratione laetantur, congregatione aliae coetum quodam modo civitatis imitantur; Mihi quidem Antiochum, quem audis, satis belle videris attendere. Et quidem, inquit, vehementer errat; Quia dolori non voluptas contraria est, sed doloris privatio. Duo Reges: constructio interrete. Immo alio genere; Animi enim quoque dolores percipiet omnibus partibus maiores quam corporis. An nisi populari fama?</p>
             
     </div>
 </section>
